--- a/login.html
+++ b/login.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Inicia sesión</h1>
+        <h1 class="textoLogin">Inicia sessió</h1>
         <form action="php/login.php" method="POST">
-            <input type="email" name="correo" placeholder="Correo electrónico" required><br><br>
-            <input type="password" name="contraseña" placeholder="Contraseña" required><br><br>
-            <input type="submit" value="Iniciar sesión">
+            <input class="inputCorreo" type="email" placeholder="Correo electrónico" required><br><br>
+            <input class="inputContraseña" type="password" placeholder="Contraseña" required><br><br>
+            <input class="botonSubmit" type="submit" value="Iniciar sesión">
         </form>
         <a href="register.html" class="createAccButton">Crear cuenta</a>
     </div>
 </body>
 </html>
+
