--- a/login.html
+++ b/login.html
@@ -9,10 +9,11 @@
 <body>
     <div class="container">
         <h1 class="textoLogin">Inicia sessió</h1>
-        <form action="php/login.php" method="POST">
-            <input class="inputCorreo" type="email" placeholder="Correo electrónico" required><br><br>
-            <input class="inputContraseña" type="password" placeholder="Contraseña" required><br><br>
-            <input class="botonSubmit" type="submit" value="Iniciar sesión">
+<form action="php/login.php" method="POST">
+    <input class="inputCorreo" type="email" name="correo" placeholder="Correo electrónico" required><br><br>
+    <input class="inputContraseña" type="password" name="contraseña" placeholder="Contraseña" required><br><br>
+    <input class="botonSubmit" type="submit" value="Iniciar sesión">
+</form>
         </form>
         <a href="register.html" class="createAccButton">Crear cuenta</a>
     </div>
