--- a/register.html
+++ b/register.html
@@ -10,10 +10,11 @@
     <div class="container">
         <h1 class="textoRegistro">Registro de usuario</h1>
         <form action="php/register.php" method="POST">
-            <input class="inputNombre" type="text" placeholder="Nombre" required><br><br>
-            <input class="inputCorreo" type="email" placeholder="Correo" required><br><br>
-            <input class="inputContraseña" type="password" placeholder="Contraseña" required><br><br>
-            <select class="seleccionRol">
+            <input class="inputNombre" type="text" name="nombre" placeholder="Nombre" required><br><br>
+            <input class="inputCorreo" type="email" name="correo" placeholder="Correo" required><br><br>
+            <input class="inputContraseña" type="password" name="contraseña" placeholder="Contraseña" required><br><br>
+            <select class="seleccionRol" name="rol" required>
+                <option value="">Selecciona un rol</option>
                 <option value="alumno">Alumno</option>
                 <option value="profesor">Profesor</option>
             </select><br><br>
@@ -22,5 +23,3 @@
     </div>
 </body>
 </html>
-
-
