--- a/login.html
+++ b/login.html
@@ -10,12 +10,13 @@
     <div class="container">
         <h1 class="textoLogin">Inicia sessió</h1>
         <form action="php/login.php" method="POST">
-            <input class="inputCorreo" type="email" placeholder="Correo electrónico" required><br><br>
-            <input class="inputContraseña" type="password" placeholder="Contraseña" required><br><br>
+            <input class="inputCorreo" name="correo" type="email" placeholder="Correo electrónico" required><br><br>
+            <input class="inputContraseña" name="contraseña" type="password" placeholder="Contraseña" required><br><br>
             <input class="botonSubmit" type="submit" value="Iniciar sesión">
         </form>
         <a href="register.html" class="createAccButton">Crear cuenta</a>
     </div>
 </body>
 </html>
+
 
