--- a/register.html
+++ b/register.html
@@ -10,10 +10,10 @@
     <div class="container">
         <h1 class="textoRegistro">Registro de usuario</h1>
         <form action="php/register.php" method="POST">
-            <input class="inputNombre" type="text" placeholder="Nombre" required><br><br>
-            <input class="inputCorreo" type="email" placeholder="Correo" required><br><br>
-            <input class="inputContraseña" type="password" placeholder="Contraseña" required><br><br>
-            <select class="seleccionRol">
+            <input class="inputNombre" name="nombre" type="text" placeholder="Nombre" required><br><br>
+            <input class="inputCorreo" name="correo" type="email" placeholder="Correo" required><br><br>
+            <input class="inputContraseña" name="contraseña" type="password" placeholder="Contraseña" required><br><br>
+            <select class="seleccionRol" name="rol">
                 <option value="alumno">Alumno</option>
                 <option value="profesor">Profesor</option>
             </select><br><br>
