--- a/register.html
+++ b/register.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro - EduMain</title>
-    <link rel="stylesheet" href="register.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Registro - EduMain</title>
+<link rel="stylesheet" href="register.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="textoRegistro">Registro de usuario</h1>
-        <form action="php/register.php" method="POST">
-            <input class="inputNombre" type="text" name="nombre" placeholder="Nombre" required><br><br>
-            <input class="inputCorreo" type="email" name="correo" placeholder="Correo" required><br><br>
-            <input class="inputContraseña" type="password" name="contraseña" placeholder="Contraseña" required><br><br>
-            <select class="seleccionRol" name="rol" required>
-                <option value="">Selecciona un rol</option>
-                <option value="alumno">Alumno</option>
-                <option value="profesor">Profesor</option>
-            </select><br><br>
-            <input class="botonSubmit" type="submit" value="Registrarse">
-        </form>
-    </div>
+
+<div class="container">
+<h1 class="textoRegistro">Registre d'suario</h1>
+
+<form action="php/register.php" method="POST">
+
+<input class="inputNombre" type="text" name="nombre" placeholder="Nombre" required>
+<br><br>
+
+<input class="inputCorreo" type="email" name="correo" placeholder="Correo" required>
+<br><br>
+
+<input class="inputContraseña" type="password" name="contraseña" placeholder="Contraseña" required>
+<br><br>
+
+<select class="seleccionRol" name="rol" required>
+<option value="">Selecciona un rol</option>
+<option value="alumno">Alumno</option>
+<option value="profesor">Profesor</option>
+</select>
+<br><br>
+
+<input class="botonSubmit" type="submit" value="Registrarse">
+
+</form>
+
+</div>
+
 </body>
 </html>
