--- a/login.html
+++ b/login.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - EduMain</title>
-    <link rel="stylesheet" href="login.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Login - EduMain</title>
+<link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="textoLogin">Inicia sessió</h1>
+
+<div class="container">
+<h1 class="textoLogin">Inicia sesió</h1>
+
 <form action="php/login.php" method="POST">
-    <input class="inputCorreo" type="email" name="correo" placeholder="Correo electrónico" required><br><br>
-    <input class="inputContraseña" type="password" name="contraseña" placeholder="Contraseña" required><br><br>
-    <input class="botonSubmit" type="submit" value="Iniciar sesión">
+
+<input class="inputCorreo" type="email" name="correo" placeholder="Correo electronico" required>
+
+<br><br>
+
+<input class="inputContraseña" type="password" name="contraseña" placeholder="Contraseña" required>
+
+<br><br>
+
+<input class="botonSubmit" type="submit" value="Iniciar sesion">
+
 </form>
-        </form>
-        <a href="register.html" class="createAccButton">Crear cuenta</a>
-    </div>
+</form>
+
+<a href="register.html" class="createAccButton">Crear cuenta</a>
+</div>
+
 </body>
 </html>
-
