--- a/login.html
+++ b/login.html
@@ -1,55 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login - EduMain</title>
-<link rel="stylesheet" href="login.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - EduMain</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-<<<<<<< HEAD
     <div class="container">
         <h1 class="textoLogin">Inicia sessió</h1>
-<<<<<<< HEAD
+
         <form action="php/login.php" method="POST">
-            <input class="inputCorreo" name="correo" type="email" placeholder="Correo electrónico" required><br><br>
-            <input class="inputContraseña" name="contraseña" type="password" placeholder="Contraseña" required><br><br>
+            <input class="inputCorreo" type="email" name="correo" placeholder="Correo electrónico" required><br><br>
+            <input class="inputContraseña" type="password" name="contraseña" placeholder="Contraseña" required><br><br>
             <input class="botonSubmit" type="submit" value="Iniciar sesión">
-=======
-=======
-
-<div class="container">
-<h1 class="textoLogin">Inicia sesió</h1>
-
->>>>>>> 6cca4e37ad2e6071aee32fddf9408dab6b7470c2
-<form action="php/login.php" method="POST">
-
-<input class="inputCorreo" type="email" name="correo" placeholder="Correo electronico" required>
-
-<br><br>
-
-<input class="inputContraseña" type="password" name="contraseña" placeholder="Contraseña" required>
-
-<br><br>
-
-<input class="botonSubmit" type="submit" value="Iniciar sesion">
-
-</form>
-<<<<<<< HEAD
->>>>>>> a792c069fd5c9ae889041a90d33714c4e7078c1f
         </form>
+
         <a href="register.html" class="createAccButton">Crear cuenta</a>
     </div>
 </body>
 </html>
 
 
-=======
-</form>
-
-<a href="register.html" class="createAccButton">Crear cuenta</a>
-</div>
-
-</body>
-</html>
->>>>>>> 6cca4e37ad2e6071aee32fddf9408dab6b7470c2
